# DevDash

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: CLAUDE.md
docs/dev/: project-rules.md  tauri-setup.md
docs/manage/: devdash_product_backlog.md
sample_design/: developer_dashboard_ui_design.html
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
